hard-gists/60bacd65c89e5290f452/run.log
=== Docker Run Log for 60bacd65c89e5290f452 ===
Started at: Mi 29. Okt 16:19:55 CET 2025

[2025-10-29 16:19:55] START: Running container for 60bacd65c89e5290f452
[2025-10-29 16:19:56] SUCCESS: Container 7a41f7e38060273d1d09d6b1df6a9235b448a6d6391a769a134e8a7de7b740f8 started for 60bacd65c89e5290f452
=== Container logs for 60bacd65c89e5290f452 ===
  File "/snippet.py", line 120
    print 'Track Color:',    progress_view.track_tint_color
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 60bacd65c89e5290f452 ===
[2025-10-29 16:19:58] INFO: Container 7a41f7e38060273d1d09d6b1df6a9235b448a6d6391a769a134e8a7de7b740f8 has stopped
